# ptxdist

./: COPYING  Makefile.in
config/: Kconfig
config/boardsetup/: Kconfig
config/collection/: Kconfig
config/hostapd/: defconfig
config/images/: ext.config
config/meson/: cross-file.meson.in
config/qemu/: qemu-cross
config/setup/: Kconfig  ptxdistrc.default
config/wpasupplicant/: defconfig
doc/: conf.py  contributing.rst  daily_work.inc  daily_work_section.rst  dev_manual.rst  environment.rst  index.rst  multi_image_platforms.inc  preamble.inc  ref_make_macros.inc  ref_make_variables.inc  ref_manual.rst  ref_parameter.inc  ref_rule_file_layout.inc  user_manual.inc
patches/SDL2-2.0.10/: 0001-sdl-2.0.8-add-egl-cflags-to-test.patch
patches/acl-2.2.52/: series  (+1 more)
rules/: Kconfig  acl.make  alfred.make  alsa-lib.in  alsa-lib.make  alsa-utils.in  alsa-utils.make  archivemount.in  archivemount.make  argtable2.make  arm-memspeed.make  arora.make  at.make  at91bootstrap.make  at91bootstrap2.make  atk.make  atkmm.make  atop.make  attr.in  attr.make  audiofile.make  aumix.make  autossh.make  avahi.in  avahi.make  barebox.make  barebox_mlo.make  base.make  bash.in  bash.make  batctl.make  bc.make  beep.make  berlios-can-utils.in  berlios-can-utils.make  bing.make  binutils.make  blackbox.make  blktrace.in  blktrace.make  (+1244 more)
rules/templates/src-meson-prog/: @name@.c  COPYING  config.h.in  meson.build  wizard.sh
scripts/: configure_helper.py  helper  libptxdist.sh  license-yaml2csv.py  pkg-config-wrapper  rauc-gen-test-certs.sh  split-error-log.awk  update_spdx.py
(+349 files in other folders)
